--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.17",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0"
   },
