--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.4.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.17",
     "expo-status-bar": "~1.12.1",
